--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>mwangi</title>
+    <title>dennis mwangi</title>
   </head>
   <body>
 <p>EDUCATION</P>
